--- a/es/index.html
+++ b/es/index.html
@@ -163,7 +163,7 @@
             ></button>
           </div>
           <div class="modal-body">
-            Bienvenido! Esta pagina ha sido desarrollada para el colegio donde
+            Bienvenid@! Esta pagina ha sido desarrollada para el colegio donde
             estudio y todavia esta bajo construccion.<br />
             <a href="../" class="text-center">English?</a>
           </div>
@@ -259,8 +259,8 @@
           mayor frecuencia debido a tormentas eléctricas (o errores humanos), y
           nuestros glaciares se están derritiendo extremadamente rápido debido
           al aumento de temperatura.
-          <a href="http://en.wikipedia.org/wiki/climatechange" target="_blank"
-            ><sub><em>Ver mas!</em></sub></a
+          <a href="https://es.wikipedia.org/wiki/Cambio_clim%C3%A1tico" target="_blank"
+            ><sub><em>Ver mas! <i class="fas fa-external-link-alt"></i></em></sub></a
           >
         </p>
       </div>
@@ -273,7 +273,7 @@
       <div id="whycontainer">
         <p id="whytext">
           "¿Por qué tenemos que ayudar?" es una muy buena pregunta! ¿Recuerdas
-          que nuestro clima cambió debido a una pared hecha de CO<sub>2</sub>
+          que nuestro clima esta cambiando debido a una pared hecha de CO<sub>2</sub>
           que se formó alrededor de nuestro planeta? El calor del sol está
           entrando dentro de esa pared y no sale, lo que significa que cada año,
           los dias será cada vez más cálido, hasta que un día, habrá demasiado
