--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           thunderstorms or human mistakes, and our glaciers are melting
           extremely fast due to the temperature rising.
           <a href="http://en.wikipedia.org/wiki/climatechange" target="_blank"
-            ><sub><em>Learn More!</em></sub></a
+            ><sub><em>Learn More! <i class="fas fa-external-link-alt"></i></em></sub></a
           >
         </p>
       </div>
