improved mobile support and youtube video embed no longer affects your youtube hitory

--- a/es/index.html
+++ b/es/index.html
@@ -85,10 +85,7 @@
       property="og:description"
     />
     <meta content="Cambio Climatico" property="og:site_name" />
-    <meta
-      content="../images/navhome"
-      property="og:image"
-    />
+    <meta content="../images/navhome" property="og:image" />
     <!-- Meta Tags -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -164,7 +161,12 @@
           </div>
           <div class="modal-body">
             Bienvenid@! Esta pagina ha sido desarrollada para el colegio donde
-            estudio y todavia esta bajo construccion.<br />
+            estudio y todavia esta bajo construccion.
+            <br />
+            Progreso:
+            <br />
+            Pagina Web: 85% | Juego: 5%
+            <br />
             <a href="../" class="text-center">English?</a>
           </div>
           <div class="modal-footer">
@@ -205,7 +207,7 @@
             <iframe
               width="460"
               height="258.75"
-              src="https://www.youtube.com/embed/p1EJBEn3HuQ"
+              src="https://www.youtube-nocookie.com/embed/p1EJBEn3HuQ"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -226,14 +228,14 @@
     </div>
     <section id="navbarSection"></section>
     <div id="navcontainer" class="sticky-top">
-        <a href="#what"><div class="navbaritems nav-center">¿Que?</div></a>
-        <a href="#why"><div class="navbaritems nav-center">¿Por que?</div></a>
-        <a href="#top" class="navbaritems nav-center">
-          <img src="../images/navhome.png" width="50px" height="50px" alt="Home"
-        /></a>
-        <a href="#how"><div class="navbaritems nav-center">¿Como?</div></a>
-        <a href="#who"><div class="navbaritems nav-center">¿Quien?</div></a>
-      </div>
+      <a href="#what"><div class="navbaritems nav-center">¿Que?</div></a>
+      <a href="#why"><div class="navbaritems nav-center">¿Por que?</div></a>
+      <a href="#top" class="navbaritems nav-center">
+        <img src="../images/navhome.png" width="50px" height="50px" alt="Home"
+      /></a>
+      <a href="#how"><div class="navbaritems nav-center">¿Como?</div></a>
+      <a href="#who"><div class="navbaritems nav-center">¿Quien?</div></a>
+    </div>
     <section id="what">
       <h1 id="whattitle" class="text-center title">¿Que?</h1>
       <h1 id="whatsubtitle" class="text-center subtitle">
@@ -259,9 +261,12 @@
           mayor frecuencia debido a tormentas eléctricas (o errores humanos), y
           nuestros glaciares se están derritiendo extremadamente rápido debido
           al aumento de temperatura.
-          <a href="https://es.wikipedia.org/wiki/Cambio_clim%C3%A1tico" target="_blank"
-            ><sub><em>Ver mas! <i class="fas fa-external-link-alt"></i></em></sub></a
-          >
+          <a
+            href="https://es.wikipedia.org/wiki/Cambio_clim%C3%A1tico"
+            target="_blank"
+            ><sub
+              ><em>Ver mas! <i class="fas fa-external-link-alt"></i></em></sub
+          ></a>
         </p>
       </div>
     </section>
@@ -273,7 +278,9 @@
       <div id="whycontainer">
         <p id="whytext">
           "¿Por qué tenemos que ayudar?" es una muy buena pregunta! ¿Recuerdas
-          que nuestro clima esta cambiando debido a una pared hecha de CO<sub>2</sub>
+          que nuestro clima esta cambiando debido a una pared hecha de CO<sub
+            >2</sub
+          >
           que se formó alrededor de nuestro planeta? El calor del sol está
           entrando dentro de esa pared y no sale, lo que significa que cada año,
           los dias será cada vez más cálido, hasta que un día, habrá demasiado
@@ -371,13 +378,13 @@
     </section>
     <footer>
       <div class="text-center">
-        Pagina Web hecho por ZhaiDigital<a
-          href="https://www.zhai.digital"
-          target="_blank"
+        Pagina Web hecho por ZhaiDigital
+        <a href="https://www.zhai.digital" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021 <br />
-        Juego hecho por TI<a href="#" target="_blank"
+        Juego hecho por TI
+        <a href="#" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021
