--- a/index.html
+++ b/index.html
@@ -159,7 +159,12 @@
           </div>
           <div class="modal-body">
             Welcome! This website is made for my school and is yet under
-            development.<br />
+            development.
+            <br />
+            Progress:
+            <br />
+            Webpage: 85% | Game: 5%
+            <br />
             <a href="./es/" class="text-center">Espa&ntilde;ol?</a>
           </div>
           <div class="modal-footer">
@@ -200,7 +205,7 @@
             <iframe
               width="460"
               height="258.75"
-              src="https://www.youtube.com/embed/wbR-5mHI6bo"
+              src="https://www.youtube-nocookie.com/embed/wbR-5mHI6bo"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -222,7 +227,7 @@
     <section id="navbarSection"></section>
     <div id="navcontainer" class="sticky-top">
       <a href="#what" class="navbaritems nav-left-side"><div>What?</div></a>
-      <a href="#why" class="navbaritems nav-left-side" ><div>Why?</div></a>
+      <a href="#why" class="navbaritems nav-left-side"><div>Why?</div></a>
       <a href="#top" class="navbaritems nav-center">
         <img src="images/navhome.png" width="50px" height="50px" alt="Home"
       /></a>
@@ -253,8 +258,10 @@
           thunderstorms or human mistakes, and our glaciers are melting
           extremely fast due to the temperature rising.
           <a href="http://en.wikipedia.org/wiki/climatechange" target="_blank"
-            ><sub><em>Learn More! <i class="fas fa-external-link-alt"></i></em></sub></a
-          >
+            ><sub
+              ><em
+                >Learn More! <i class="fas fa-external-link-alt"></i></em></sub
+          ></a>
         </p>
       </div>
     </section>
@@ -355,11 +362,13 @@
     </section>
     <footer>
       <div class="text-center">
-        Website by ZhaiDigital<a href="https://www.zhai.digital" target="_blank"
+        Website by ZhaiDigital
+        <a href="https://www.zhai.digital" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021 <br />
-        Game by YOU<a href="#" target="_blank"
+        Game by YOU
+        <a href="#" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021
