Updated credits section, added an embed stop script that doesn't even work for some reason

--- a/es/index.html
+++ b/es/index.html
@@ -205,6 +205,7 @@
           </div>
           <div class="modal-body">
             <iframe
+              class="ytvideo"
               width="460"
               height="258.75"
               src="https://www.youtube-nocookie.com/embed/p1EJBEn3HuQ"
@@ -219,6 +220,7 @@
               type="button"
               class="btn btn-secondary"
               data-bs-dismiss="modal"
+              id="modalstop"
             >
               Hecho!
             </button>
@@ -337,7 +339,7 @@
     <section id="who">
       <h1 id="whotitle" class="text-center title">Quien?</h1>
       <h1 id="whosubtitle" class="text-center subtitle">
-        Quien hizo esta pagina web?
+        Quien hizo todo esto?
       </h1>
       <div id="whocontainer">
         <div id="zhai" class="col-xs-12">
@@ -361,16 +363,16 @@
             eligendi deleniti.
           </p>
         </div>
-        <div id="shubham" class="col-xs-12">
+        <div id="greenfire" class="col-xs-12">
           <img
-            id="shubhamicon"
-            src="https://via.placeholder.com/256x256?text=Icon"
-            alt="Shubham icon"
+            id="greenfireicon"
+            src="../images/greenfireicon.jpg"
+            alt="Greenfire icon"
             width="256px"
             height="256px"
           />
-          <div id="shubhamname" class="text-center">
-            <h2>Test</h2>
+          <div id="greenfirename" class="text-center">
+            <h2>GreenFire</h2>
             <h4>Desarrollador de Juegos</h4>
           </div>
         </div>
@@ -378,12 +380,12 @@
     </section>
     <footer>
       <div class="text-center">
-        Pagina Web hecho por ZhaiDigital
+        Pagina Web hecho por Zhai_
         <a href="https://www.zhai.digital" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021 <br />
-        Juego hecho por TI
+        Juego hecho por GreenFire55
         <a href="#" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
