--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
           </div>
           <div class="modal-body">
             <iframe
+              class="ytvideo"
               width="460"
               height="258.75"
               src="https://www.youtube-nocookie.com/embed/wbR-5mHI6bo"
@@ -217,6 +218,7 @@
               type="button"
               class="btn btn-secondary"
               data-bs-dismiss="modal"
+              id="modalstop"
             >
               Done!
             </button>
@@ -321,7 +323,7 @@
     <section id="who">
       <h1 id="whotitle" class="text-center title">Who?</h1>
       <h1 id="whosubtitle" class="text-center subtitle">
-        Who made this website?
+        Who made this?
       </h1>
       <div id="whocontainer">
         <div id="zhai" class="col-xs-12">
@@ -333,7 +335,7 @@
             height="256px"
           />
           <div id="zhainame" class="text-center">
-            <h2>Hongmeng Zhai</h2>
+            <h2>Zhai</h2>
             <h4>Web Developer</h4>
           </div>
         </div>
@@ -345,16 +347,16 @@
             eligendi deleniti.
           </p>
         </div>
-        <div id="shubham" class="col-xs-12">
+        <div id="greenfire" class="col-xs-12">
           <img
-            id="shubhamicon"
-            src="https://via.placeholder.com/256x256?text=Icon"
-            alt="Shubham icon"
+            id="greenfireicon"
+            src="images/greenfireicon.jpg"
+            alt="Greenfire icon"
             width="256px"
             height="256px"
           />
-          <div id="shubhamname" class="text-center">
-            <h2>Test</h2>
+          <div id="greenfirename" class="text-center">
+            <h2>GreenFire</h2>
             <h4>Game Developer</h4>
           </div>
         </div>
@@ -362,16 +364,13 @@
     </section>
     <footer>
       <div class="text-center">
-        Website by ZhaiDigital
+        Website by Zhai_
         <a href="https://www.zhai.digital" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
-        &copy; 2021 <br />
-        Game by YOU
-        <a href="#" target="_blank"
-          ><sup><i class="fas fa-external-link-alt"></i></sup
-        ></a>
-        &copy; 2021
+        &copy; Copyright 2021 <br />
+        Game by GreenFire55
+        &copy; Copyright 2021
       </div>
     </footer>
   </body>
