removed game because no game dev ;(

--- a/es/index.html
+++ b/es/index.html
@@ -165,7 +165,7 @@
             <br />
             Progreso:
             <br />
-            Pagina Web: 95% | Juego: 2.5%
+            Pagina Web: 95%
             <br />
             <a href="../" class="text-center">English?</a>
           </div>
@@ -324,20 +324,20 @@
         </p>
       </div>
     </section>
-    <section id="play">
-      <h1 id="playtitle" class="text-center title">Juega!</h1>
-      <h1 id="playsubtitle" class="text-center subtitle">
-        Hicimos un pequeño juego sobre el cambio climatico. ¿Puedes ganar?
-      </h1>
-      <h6 class="text-center">
-        <em
-          >¡El juego es apropiado y educativo para todos y para todas de
-          cualqueir edad!</em
-        >
-      </h6>
-    </section>
     <section id="who">
       <h1 id="whotitle" class="text-center title">Quien?</h1>
+      <h1 id="whosubtitle" class="text-center subtitle">
+        Quien es responsable de esto?
+      </h1>
+      <div id="whotextcontainer2">
+        <p id="whotext2">
+          Todos. Todo el mundo. La planeta Tierra es nuestro hogar despues de
+          todo, nosotros somos los que deciden su futuro, nosotros
+          <b>somos</b> su futuro. Recuerdas lo que te dijimos antes? Tu puedes
+          hacerlo con muy poco esfuerzo, todo se apila y hace una gran
+          diferencia.
+        </p>
+      </div>
       <h1 id="whosubtitle" class="text-center subtitle">
         Quien hizo todo esto?
       </h1>
@@ -357,24 +357,8 @@
         </div>
         <div id="whotextcontainer" class="text-center col-md-12 col-xs-12">
           <p id="whotext">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum
-            molestiae id harum aliquam ullam maiores sit quaerat. Ipsum tenetur
-            vero quos itaque placeat. Fuga laudantium non consequatur sunt,
-            eligendi deleniti.
+            Hola! Me llamo Hongmeng Zhai y estudio desarrollo web. Este proyecto ha sido creado por el colegio<sup>o escuela</sup> Saint John's School de Concepcion. Gracias por ver mi pagina web!
           </p>
-        </div>
-        <div id="greenfire" class="col-xs-12">
-          <img
-            id="greenfireicon"
-            src="../images/greenfireicon.jpg"
-            alt="Greenfire icon"
-            width="256px"
-            height="256px"
-          />
-          <div id="greenfirename" class="text-center">
-            <h2>GreenFire</h2>
-            <h4>Desarrollador de Juegos</h4>
-          </div>
         </div>
       </div>
     </section>
@@ -385,11 +369,6 @@
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
         &copy; 2021 <br />
-        Juego hecho por GreenFire55
-        <a href="#" target="_blank"
-          ><sup><i class="fas fa-external-link-alt"></i></sup
-        ></a>
-        &copy; 2021
       </div>
     </footer>
   </body>
