--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <br />
             Progress:
             <br />
-            Webpage: 95% | Game: 2.5%
+            Webpage: 95%
             <br />
             <a href="./es/" class="text-center">Espa&ntilde;ol?</a>
           </div>
@@ -308,23 +308,20 @@
         </p>
       </div>
     </section>
-    <section id="play">
-      <h1 id="playtitle" class="text-center title">Play!</h1>
-      <h1 id="playsubtitle" class="text-center subtitle">
-        We made a little game about climate change. Can you beat it?
-      </h1>
-      <h6 class="text-center">
-        <em
-          >Game is appropriate and educational for everyone and for every
-          age!</em
-        >
-      </h6>
-    </section>
     <section id="who">
       <h1 id="whotitle" class="text-center title">Who?</h1>
       <h1 id="whosubtitle" class="text-center subtitle">
-        Who made this?
+        Who are the responsible for this?
       </h1>
+      <div id="whotextcontainer2">
+        <p id="whotext2">
+          Everyone. Everyone is, this is our home planet after all, we decide
+          its future, we <b>are</b> its future. As we told you before, you can
+          do it, with very little effort, it piles up and makes a great
+          difference.
+        </p>
+        </div>
+      <h1 id="whosubtitle" class="text-center subtitle">Who made this?</h1>
       <div id="whocontainer">
         <div id="zhai" class="col-xs-12">
           <img
@@ -341,24 +338,8 @@
         </div>
         <div id="whotextcontainer" class="text-center col-md-12 col-xs-12">
           <p id="whotext">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum
-            molestiae id harum aliquam ullam maiores sit quaerat. Ipsum tenetur
-            vero quos itaque placeat. Fuga laudantium non consequatur sunt,
-            eligendi deleniti.
+            Hey! I'm Hongmeng Zhai and I'm currently studying web development. This project is for Saint John's School located in Concepcion. Thank you for checking my website out!
           </p>
-        </div>
-        <div id="greenfire" class="col-xs-12">
-          <img
-            id="greenfireicon"
-            src="images/greenfireicon.jpg"
-            alt="Greenfire icon"
-            width="256px"
-            height="256px"
-          />
-          <div id="greenfirename" class="text-center">
-            <h2>GreenFire</h2>
-            <h4>Game Developer</h4>
-          </div>
         </div>
       </div>
     </section>
@@ -368,9 +349,6 @@
         <a href="https://www.zhai.digital" target="_blank"
           ><sup><i class="fas fa-external-link-alt"></i></sup
         ></a>
-        &copy; Copyright 2021 <br />
-        Game by GreenFire55
-        &copy; Copyright 2021
       </div>
     </footer>
   </body>
